adjustments pre-launch

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -67,7 +67,7 @@
         }
       ],
       "order": 1,
-      "title": "General Partner"
+      "title": "General Partners"
     },
     {
       "items": [],
@@ -87,7 +87,7 @@
   ],
   "schedule": {
     "2016-09-09": {
-      "date": "2024-12-01",
+      "date": "2025-02-28",
       "dateReadable": "December TBD",
       "timeslots": [
         {
@@ -460,6 +460,25 @@
           "title": "Website and sponsors"
         },
         {
+          "name": "Hend AlQett",
+          "photo": "/images/people/hend.jpg",
+          "photoUrl": "https://firebasestorage.googleapis.com/v0/b/devfest-323e1.appspot.com/o/images%2Fpeople%2Fhend.jpg?alt=media&token=bfd34b36-737c-4e8f-ae76-a2d491dcc162",
+          "socials": [
+            {
+              "icon": "linkedin",
+              "link": "https://www.linkedin.com/in/hendq/",
+              "name": "LinkedIn"
+            },
+            {
+              "icon": "twitter",
+              "link": "",
+              "name": "X"
+            }
+          ],
+          "order": 3,
+          "title": "Social and Media, Volunteers"
+        },
+        {
           "name": "Jonas Jonsson",
           "photo": "/images/people/daniele.jpg",
           "photoUrl": "https://firebasestorage.googleapis.com/v0/b/devfest-323e1.appspot.com/o/images%2Fpeople%2Fjonas.jpg?alt=media&token=7de9c273-4cfe-43a1-ab7c-7afe829b0e66",
@@ -475,8 +494,8 @@
               "name": "X"
             }
           ],
-          "order": 3,
-          "title": "Social and Medi, Volunteers"
+          "order": 4,
+          "title": "Social and Media, Volunteers"
         },
         {
           "name": "Marina Dushkina",
@@ -494,15 +513,15 @@
               "name": "X"
             }
           ],
-          "order": 4,
-          "title": "Social and Medi, Volunteers"
+          "order": 5,
+          "title": "Social and Media, Volunteers"
         },
         {
           "name": "Mikael Kent Svensson",
           "photo": "/images/people/Mikael.jpg",
           "photoUrl": "https://firebasestorage.googleapis.com/v0/b/devfest-323e1.appspot.com/o/images%2Fpeople%2Fmikeal.jpg?alt=media&token=ae313220-2b6a-4a1d-8d06-bead2bfe2627",
           "socials": [],
-          "order": 5,
+          "order": 6,
           "title": "Sponsors"
         },
         {
@@ -521,7 +540,7 @@
               "name": "X"
             }
           ],
-          "order": 6,
+          "order": 7,
           "title": "Sponsors, speakers"
         },
         {
@@ -529,7 +548,7 @@
           "photo": "/images/people/rachel.jpg",
           "photoUrl": "https://firebasestorage.googleapis.com/v0/b/devfest-323e1.appspot.com/o/images%2Fpeople%2Frachel.jpg?alt=media&token=8a83f1fe-0817-4a17-b4c6-bb2009880b08",
           "socials": [],
-          "order": 7,
+          "order": 8,
           "title": "Copy and content"
         },
         {
@@ -548,7 +567,7 @@
               "name": "X"
             }
           ],
-          "order": 8,
+          "order": 9,
           "title": "Sponsors"
         },
         {
@@ -567,7 +586,7 @@
               "name": "X"
             }
           ],
-          "order": 9,
+          "order": 10,
           "title": "Ticketing"
         },
         {
@@ -586,8 +605,8 @@
               "name": "X"
             }
           ],
-          "order": 10,
-          "title": "Social and Medi, Volunteers"
+          "order": 11,
+          "title": "Social and Media, Volunteers"
         }
       ],
       "title": "Core Team"
@@ -610,40 +629,40 @@
     {
       "available": true,
       "currency": "SEK",
-      "ends": "Nov 30",
+      "ends": "No expiration",
       "info": "Requires valid student/lecturer ID",
       "name": "EDU",
       "price": 400,
       "soldOut": false,
-      "starts": "Jun 1",
-      "url": "https://billetto.com/events/xxx"
+      "starts": "Available now",
+      "url": "https://billetto.se/en/e/devfest-2024-biljetter-991959"
     },
     {
       "available": true,
       "currency": "SEK",
-      "ends": "Sep 1",
+      "ends": "Nov 30",
       "inDemand": true,
       "info": "Limited amount of tickets",
       "name": "Early Bird",
       "price": 500,
       "regular": false,
       "soldOut": false,
-      "starts": "Jun 1",
-      "url": "https://billetto.com/events/xxx"
+      "starts": "Available now",
+      "url": "https://billetto.se/en/e/devfest-2024-biljetter-991959"
     },
     {
-      "available": false,
+      "available": true,
       "currency": "SEK",
-      "ends": "Nov 30",
+      "ends": "Jan 31, 2025",
       "inDemand": false,
-      "info": "",
+      "info": "Support the event and buy it now",
       "name": "Regular",
-      "price": 1000,
+      "price": 750,
       "primary": true,
       "regular": true,
       "soldOut": false,
-      "starts": "Sep 1",
-      "url": "https://billetto.com/events/xxx"
+      "starts": "Available now",
+      "url": "https://billetto.se/en/e/devfest-2024-biljetter-991959"
     }
   ],
   "triggers": {
