early bird unavailable

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -640,12 +640,13 @@
     {
       "available": true,
       "currency": "SEK",
-      "ends": "Nov 30",
+      "ends": "Jan 31, 2025",
       "inDemand": true,
-      "info": "Limited amount of tickets",
-      "name": "Early Bird",
-      "price": 500,
-      "regular": false,
+      "info": "Join us!",
+      "name": "Regular",
+      "price": 750,
+      "primary": true,
+      "regular": true,
       "soldOut": false,
       "starts": "Available now",
       "url": "https://billetto.se/en/e/devfest-2024-biljetter-991959"
@@ -653,13 +654,12 @@
     {
       "available": true,
       "currency": "SEK",
-      "ends": "Jan 31, 2025",
+      "ends": "No expiration",
       "inDemand": false,
       "info": "Support the event and buy it now",
-      "name": "Regular",
-      "price": 750,
-      "primary": true,
-      "regular": true,
+      "name": "Late Bird",
+      "price": 1000,
+      "regular": false,
       "soldOut": false,
       "starts": "Available now",
       "url": "https://billetto.se/en/e/devfest-2024-biljetter-991959"
