--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -98,7 +98,7 @@
   "socialNetwork": {
     "follow": [
       {
-        "name": "linkedIn",
+        "name": "linkedin",
         "url": "https://linkedin.com/company/gdg-sweden/"
       },
       {
