--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -22,6 +22,11 @@
       "label": "Home"
     },
     {
+      "route": "speakers",
+      "permalink": "/speakers",
+      "label": "Speakers"
+    },
+    {
       "route": "team",
       "permalink": "/team",
       "label": "Team"
