--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -14,7 +14,7 @@
     "locale": "en-US"
   },
   "hashtag": "DevFestStockholm",
-  "disabledSchedule": true,
+  "disabledSchedule": false,
   "navigation": [
     {
       "route": "home",
@@ -25,6 +25,11 @@
       "route": "speakers",
       "permalink": "/speakers",
       "label": "Speakers"
+    },
+    {
+      "route": "schedule",
+      "permalink": "/schedule",
+      "label": "Schedule"
     },
     {
       "route": "team",
@@ -47,6 +52,14 @@
       "description": "Hear from the Googlers, Partners, and Guest Speakers who are building the future of tech. Check back often as we add more speakers, including our customers and partners.",
       "background": {
         "color": "#FFF"
+      },
+      "fontColor": "#424242"
+    },
+    "schedule": {
+      "title": "Schedule",
+      "metaDescription": "Choose your sessions to visit",
+      "background": {
+        "color": "#fff"
       },
       "fontColor": "#424242"
     },
