late bird ticket

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -355,29 +355,29 @@
     {
       "available": true,
       "currency": "SEK",
-      "ends": "Jan 31, 2025",
+      "ends": "No expiration",
       "inDemand": true,
       "info": "Join us!",
-      "name": "Regular",
-      "price": 750,
-      "primary": true,
-      "regular": true,
-      "soldOut": false,
-      "starts": "Available now",
-      "url": "https://billetto.se/en/ticket_buyer/offers/d6834a91-389a-47e0-9c19-f5c47f83bcdb"
-    },
-    {
-      "available": true,
-      "currency": "SEK",
-      "ends": "No expiration",
-      "inDemand": false,
-      "info": "Support the event and buy it now",
       "name": "Late Bird",
       "price": 1000,
       "regular": false,
       "soldOut": false,
       "starts": "Available now",
       "url": "https://billetto.se/en/e/devfest-2024-biljetter-991959"
+    },
+    {
+      "available": false,
+      "currency": "SEK",
+      "ends": "Jan 31, 2025",
+      "inDemand": false,
+      "info": "",
+      "name": "Regular",
+      "price": 750,
+      "primary": true,
+      "regular": true,
+      "soldOut": false,
+      "starts": "Expired",
+      "url": "https://billetto.se/en/ticket_buyer/offers/d6834a91-389a-47e0-9c19-f5c47f83bcdb"
     }
   ],
   "triggers": {
